Thu Feb 12 18:25:47 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* job/sort.rb: 順序値指定ブロックを指定できるようにした.

Tue Feb 10 20:50:07 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* job/sort.rb, share/conf.rb, etc/fairy.rb: sort追加
	* share/varray.rb: VArray#size, VArray#arrays_each 追加

Tue Feb 10 17:36:08 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* node/n-mod-group-by.rb: MergeSortBuffer追加

Tue Feb 10 16:11:42 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* node/n-mod-group-by.rb, share/conf.rb, etc/fairy.conf: 
	  CommandMergeSortBuffer追加

Tue Feb 10 14:13:04 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* node/port.rb: 要素転送時にリファレンスを渡す機能を追加
	  (merge_group_by対応)
	
Mon Feb  9 21:15:37 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* node/n-mode-group-by.rb: SimpleCommandSortBuffer作成
	* share/stdout.rb: flush追加(ダミー, Process.fork対応)

Mon Feb  9 19:40:05 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* node/n-mode-group-by.rb, share/conf.rb, etc/fairy.rb: 
	  SimpleFileByKeyBuffer 作成

Mon Feb  9 18:43:03 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* node/n-mode-group-by.rb, share/conf.rb, etc/fairy.rb: 
	  mod-group-by-buffering-policy対応, OnMemoryBuffer追加

Mon Feb  9 17:54:53 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* controller.rb, node/n-mode-group-by.rb, share/hash-*.rb:
	  HashGenerator -> HValueGenerator: 名前が良くないので改名
	* job/equijoin.rb: equijoinとequijoin2の出力結果を合わせた

Mon Feb  9 17:34:14 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* filtering 要素: deep-copy化
	  + backend/bhere.rb
	  + node/port.rb
	  + test/testc.rb
	  + merge_group_by: 未対応

Fri Feb  6 17:41:09 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* job/cat.rb, backend/cat.rb: cat API 追加
	* job/equijoin.rb: equijoin2追加
	* job/each-substream-mapper.rb: mapf API 追加

Mon Feb  2 18:15:39 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* controller.rb, node.rb, share/*.rb: magic comment 追加忘れ
	* share/conf.rb: svnからの移行忘れ
