@@ -4,8 +4,8 @@
 module Fairy
   CONF.RUBY_BIN = ENV["FAIRY_RUBY"] || "ruby" 
 
-  CONF["emperor2"].RUBY_BIN = ENV["FAIRY_RUBY"] || "ruby-dev" 
-  CONF["gentoo"].RUBY_BIN = ENV["FAIRY_RUBY"] || "ruby-dev"
+  CONF["emperor2"].RUBY_BIN = ENV["FAIRY_RUBY"] || "ruby-1.9.1" 
+  CONF["gentoo"].RUBY_BIN = ENV["FAIRY_RUBY"] || "ruby-1.9.1"
 
   CONF.MASTER_HOST = "emperor2"
   CONF.MASTER_PORT = "19999"
@@ -38,6 +38,7 @@ module Fairy
   CONF.LOG_LEVEL = :DEBUG
 
   CONF.DEBUG_PORT_WAIT = false
+  CONF.DEBUG_FULL_BACKTRACE = false
 
 # CONF.PROCESS_LIFE_MANAGE_INTERVAL = 60
 # CONF.PROCESS_LIFE_MANAGE_INTERVAL = 10
