@@ -1931,5 +1931,158 @@ when "46", "sort"
   for w in f.here
     puts w
   end
+
+when "47.1"
+  Fairy.def_filter(:test_sort_by) do |fairy, input, block_source, *opts|
+    
+    sampling_ratio_1_to = opts[:sampling_ratio]
+    sampling_ratio_1_to ||= Fairy::CONF.SORT_SAMPLING_RATIO_1_TO
+    pvn = opts[:pvn]
+    pvn ||= Fairy::CONF.SORT_N_GROUP_BY
+    
+    va = input.emap(%{|i| 
+    sort_proc = proc{#{block_source}}
+    i.to_a.collect{|e| [sort_proc.call(e), e]}.sort_by{|e| e.first}}).to_va
+
+    if va.size/sampling_ratio_1_to < Fairy::CONF.SORT_SAMPLING_MIN
+      sampling_ratio_1_to = Fairy::CONF.SORT_SAMPLING_MIN.div(va.size)
+    end
+    if va.size/sampling_ratio_1_to > Fairy::CONF.SORT_SAMPLING_MAX
+      sampling_ratio_1_to = Fairy::CONF.SORT_SAMPLING_MAX.div(va.size)
+    end
+
+    Fairy::Log::debug(self, "SAMPLING: RATIO: 1/#{sampling_ratio_1_to}")
+    sample = fairy.input(va).select(%{|e| (i += 1) % #{sampling_ratio_1_to} == 0},
+				    :BEGIN=>%{i = 0}).here.sort_by{|e| e.first}.map{|e| e.first}
+
+    idxes = (1...pvn).collect{|i| (sample.size*i).div(pvn)}
+    idxes.push -1
+    pvs = sample.values_at(*idxes)
+    Fairy::Log::debug(self, "PVS: #{pvs.inspect}")
+    fairy.def_pool_variable(:pvs, pvs)
+
+    div = fairy.input(va).merge_group_by(%{|e| 
+    key = @Pool.pvs.find{|pv| e.first <= pv}
+    key ? key : @Pool.pvs.last})
+
+    msort = div.smap(%{|i, o|
+
+    raise "foo"
+
+    buf = i.map{|st| [st, st.pop.dc_deep_copy]}.select{|st, v|!v.nil?}.sort_by{|st, v| v.first}
+    while st_min = buf.shift
+      st, min = st_min
+      o.push min.last
+      next unless v = st.pop.dc_deep_copy # 取りあえずの対応
+      idx = buf.rindex{|st0, v0| v0.first <= v.first}
+      idx ? buf.insert(idx+1, [st, v]) : buf.unshift([st, v])
+    end})
+    
+    shuffle = msort.eshuffle(%{|i| i.sort{|s1, s2| s1.key <=> s2.key}})
+    #  shuffle = msort.eshuffle(%{|i| i.sort_by{|s1| Log::debug(self, s1.key.inspect); s1.key}})
+  end
+
+  f = fairy.input(["/etc/passwd", "/etc/group"]).test_sort_by(%{|w| w})
+  for w in f.here
+    puts w
+  end
+
+when "47.2"
+  input = fairy.input(["/etc/passwd", "/etc/group"])
+
+  sampling_ratio_1_to = Fairy::CONF.SORT_SAMPLING_RATIO_1_TO
+  pvn = Fairy::CONF.SORT_N_GROUP_BY
+    
+  va = input.emap(%{|i| 
+    sort_proc = proc{|w| w}
+    i.to_a.collect{|e| [sort_proc.call(e), e]}.sort_by{|e| e.first}}).to_va
+
+  if va.size/sampling_ratio_1_to < Fairy::CONF.SORT_SAMPLING_MIN
+    sampling_ratio_1_to = Fairy::CONF.SORT_SAMPLING_MIN.div(va.size)
+  end
+  if va.size/sampling_ratio_1_to > Fairy::CONF.SORT_SAMPLING_MAX
+    sampling_ratio_1_to = Fairy::CONF.SORT_SAMPLING_MAX.div(va.size)
+  end
+
+  Fairy::Log::debug(self, "SAMPLING: RATIO: 1/#{sampling_ratio_1_to}")
+  sample = fairy.input(va).select(%{|e| (i += 1) % #{sampling_ratio_1_to} == 0},
+				    :BEGIN=>%{i = 0}).here.sort_by{|e| e.first}.map{|e| e.first}
+
+  idxes = (1...pvn).collect{|i| (sample.size*i).div(pvn)}
+  idxes.push -1
+  pvs = sample.values_at(*idxes)
+  Fairy::Log::debug(self, "PVS: #{pvs.inspect}")
+  fairy.def_pool_variable(:pvs, pvs)
+
+  div = fairy.input(va).merge_group_by(%{|e| 
+    key = @Pool.pvs.find{|pv| e.first <= pv}
+    key ? key : @Pool.pvs.last})
+
+  msort = div.smap(%{|i, o|
+
+    raise "foo"
+
+    buf = i.map{|st| [st, st.pop.dc_deep_copy]}.select{|st, v|!v.nil?}.sort_by{|st, v| v.first}
+    while st_min = buf.shift
+      st, min = st_min
+      o.push min.last
+      next unless v = st.pop.dc_deep_copy # 取りあえずの対応
+      idx = buf.rindex{|st0, v0| v0.first <= v.first}
+      idx ? buf.insert(idx+1, [st, v]) : buf.unshift([st, v])
+    end})
+    
+  shuffle = msort.eshuffle(%{|i| i.sort{|s1, s2| s1.key <=> s2.key}})
+    #  shuffle = msort.eshuffle(%{|i| i.sort_by{|s1| Log::debug(self, s1.key.inspect); s1.key}})
+
+  for w in shuffle.here
+    puts w
+  end
+
+when "48", "exception"
+
+  iota = fairy.input(Fairy::Iota, 1000)
+  f = iota.map(%{|i| 
+    if i == 50
+       fugegeu
+    end
+    i
+  })
+  begin
+  for l in f.here
+    puts l
+  end
+  rescue
+    puts "HOGE"
+    p $!
+  end
+
+
+when "48.1", "exception"
+
+  iota = fairy.input(Fairy::Iota, 1000)
+  begin
+  f = iota.map(%{|i| 
+    if i == 50
+       fugegeu
+    end
+    i
+  })
+  rescue
+    puts "HOGEGE"
+    p $!
+  end
+
+  sleep 10
+
+  begin
+  for l in f.here
+    puts l
+  end
+  rescue
+    puts "HOGE"
+    p $!
+  end
+
+
 end
 
